// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-ehmXTo cgBkbC"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-ehmXTo cgBkbC"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-ehmXTo cgBkbC"
>
  <span
    className="sc-jveewi UoVDz"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-ehmXTo cgBkbC"
>
  <div
    className="sc-bndzKH keCgqX"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-ehmXTo kSsPUP"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-ehmXTo jlALNz"
  size="small"
/>
`;
